[package]
name = "focus-send"
version = "0.1.0-snapshot"
description = "A bare-bones Focus testing tool"
categories = ["command-line-utilities", "hardware-support"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.59.0"

[dependencies.serialport]
version = "4.2.0"

[dependencies.clap]
version = "3.2.17"
default_features = false
features = ["std", "derive", "env"]

[profile.release]
strip = true
panic = "abort"
lto = true
